k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: goserver
  labels:
    app: goserver

spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"

    spec:
      containers:
        - name: goserver
          image: "jonasexplore/hello-go:v4"
          volumeMounts:
            - mountPath: "/go/config"
              name: config
      
      volumes:
        - name: config
          configMap:
            name: configmap-config
            items:
              - key: host
                path: config.txt
